<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:minWidth="@dimen/popupMinWidth"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/destinationTitle"
            android:textColor="@color/stcp_blue"
            android:textSize="@dimen/textM" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/stcp_blue"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_origem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/botaon_popup_selector"
                android:padding="12dp"
                android:text="@string/origem" />

            <Button
                android:id="@+id/button_destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/botaon_popup_selector"
                android:padding="12dp"
                android:text="@string/destino" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>